add reset button, reset counter, fixed losses not displaying bug

--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
             <div>Ties: <span id="draw-span">0</span></div>
             <div>Games Played: <span id="games-played">0</span></div>
             <div>Win Percentage: <span id="win-percent-span">0</span>%</div>
+            <button id="reset">Reset</button>
+            <div>Times Reset: <span id="reset-span">0</span></div>
         </section>
     </main>
     <footer>
