--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
                 </ul>
             </div>
             <div>
-                <input type="radio" name="choice" value="rock"><img src="./assets/rock.png" alt="rock">
-                <input type="radio" name="choice" value="paper"><img src="./assets/paper.png" alt="paper">
-                <input type="radio" name="choice" value="scissors"><img src="./assets/scissors.png" alt="scissors">
+                <label><input type="radio" name="choice" value="rock" checked><img src="./assets/rock.png" alt="rock"></label>
+                <label><input type="radio" name="choice" value="paper"><img src="./assets/paper.png" alt="paper"></label>
+                <label><input type="radio" name="choice" value="scissors"><img src="./assets/scissors.png" alt="scissors"></label>
             </div>
             <button id="play">Play</button>
             <div>Wins: <span id="win-span">0</span></div> 
